--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-
+       <nav>
+        <h2 class="nav-title">Mary</h2>
+        <ul>
+            <li>portfolio<li>
+            <li>Blog</li>
+            <li><button>Hire</button></li>
+        </ul>
+       </nav>
     </header>
     <main>
 
