--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>developer-portfolio</title>
     <link rel="stylesheet" href="style/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
        <nav>
-        <h2 class="nav-title">Mary</h2>
+        <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
         <ul>
-            <li>portfolio<li>
+            <li>portfolio</li>
             <li>Blog</li>
-            <li><button>Hire</button></li>
+            <li><button class="btn-primary">Hire</button></li>
         </ul>
        </nav>
+       <!-- header banner -->
+    <div class="banner">
+        <div>
+            <h3 class="banner-sub-title">Hi, Iam</h3>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        </div>
+        <img src="images/hardy.png">
+    </div>
     </header>
     <main>
 
