--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
        <nav>
         <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
         <ul>
@@ -24,13 +24,35 @@
         <div>
             <h3 class="banner-sub-title">Hi, Iam</h3>
             <h1 class="banner-title">Mary Hardy</h1>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="btn-primary">Download CV</button>
         </div>
         <img src="images/hardy.png">
     </div>
     </header>
     <main>
-
+        <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>    
+        <div class="about-info-container">
+            <div class="about-info">
+                <p class="info-title">Name:</p>
+                <p class="info-description">mary Hardy</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">email</p>
+                <p class="info-description">info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">specialty</p>
+                <p class="info-description">wev dev</p>
+            </div>
+            <div class="about-info">
+                <p class="info-title">location</p>
+                <p class="info-description">Los Angeles,USA</p>
+            </div>
+        </div>
     </main>
     <footer>
         
