--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
     </div>
     </header>
     <main>
+        <!-- ABOUT SECTION -->
         <section class="about">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-        </section>    
+        <!-- INFO SECTION -->
         <div class="about-info-container">
             <div class="about-info">
                 <p class="info-title">Name:</p>
-                <p class="info-description">mary Hardy</p>
+                <p class="info-description">Mary Hardy</p>
             </div>
             <div class="about-info">
                 <p class="info-title">email</p>
@@ -53,6 +54,41 @@
                 <p class="info-description">Los Angeles,USA</p>
             </div>
         </div>
+        </section>    
+        <!-- WHAT I DO SECTION -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description2">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla javascript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tenetur est ratione laudantium recusandae reprehenderit!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">A consequuntur inventore, molestiae tenetur quam cum repellendus, culpa eveniet, maiores iusto sit odio? Soluta.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongo db</p>
+                    <p class="skill-description">Iure qui modi adipisci vitae nulla illo nemo id corporis culpa nam. Deserunt, fuga totam.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node js</p>
+                    <p class="skill-description">Minus cum dicta voluptatibus enim alias, fugit culpa amet debitis harum, quod quia dolores tempora.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume section -->
+        <section>
+            <section class="resume">
+                <h3 class="section-title">A summary of My Resume</h3>
+            </section>
+        </section>
     </main>
     <footer>
         
