--- a/index.html
+++ b/index.html
@@ -84,11 +84,38 @@
             </div>
         </section>
         <!-- Resume section -->
-        <section>
             <section class="resume">
                 <h3 class="section-title">A summary of My Resume</h3>
+                <div class="resume-content">
+                    <div>
+                        <h3 class="resume-title">My Education</h3>
+                        <div class="resume-item">
+                            <h3 class="title">Master in Computer Engineering</h3>
+                            <h4 class="sub-title">Harvard University / 2015 - 2017</h4>
+                            <p class="description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h3 class="title">Master in Computer Engineering</h3>
+                            <h4 class="sub-title">Harvard University / 2015 - 2017</h4>
+                            <p class="description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h3 class="title">Master in Computer Engineering</h3>
+                            <h4 class="sub-title">Harvard University / 2015 - 2017</h4>
+                            <p class="description">List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3 class="resume-title">My Experience</h3>
+                    </div>
+                </div>
             </section>
-        </section>
     </main>
     <footer>
         
