--- a/index.html
+++ b/index.html
@@ -138,6 +138,32 @@
                     <button class="btn-primary">Download CV</button>
                 </div>
             </section>
+<!-- contact section -->
+            <section class="contact">
+                <div>
+                    <h3 class="section-title">Let's contact</h3>
+                    <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae qui ut obcaecati ad possimus nobis omnis, optio nihil quae labore veritatis nisi. Quidem commodi voluptatibus ipsum doloremque blanditiis, dolorum doloribus.</p>
+                    <a href="">
+                        <img src="images/icons/facebook.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/insta.png" alt="">
+                    </a>
+
+                </div>
+                <div>
+                    <h3 class="section-title">Let's messege me</h3>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="your name">
+                        <input type="text" placeholder="your email">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="messeage"></textarea>
+                        <input class="btn-primary" type="submit" value="submit" >
+                    </form>
+                </div>
+            </section>
     </main>
     <footer>
         
